--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -89,17 +88,16 @@
 
     <header>
         <h1>Servidor Squad</h1>
-        <p>Apoya nuestro servidor y forma parte del escuadrón.</p>
+        <p>Apoya nuestro servidor y forma parte de la comunidad.</p>
     </header>
     <section>
         <h2>Contribuye con una donación</h2>
         <p>Tu apoyo mantiene vivo el servidor de Squad. ¡Gracias por tu ayuda!</p>
         <div class="donations">
-            <button onclick="location.href='https://paypal.me/youraccount/3'">Donar 3€</button>
-            <button onclick="location.href='https://paypal.me/youraccount/5'">Donar 5€</button>
-            <button onclick="location.href='https://paypal.me/youraccount/10'">Donar 10€</button>
-            <button onclick="location.href='https://paypal.me/youraccount/25'">Donar 25€</button>
-            <button onclick="location.href='https://paypal.me/youraccount/50'">Donar 50€</button>
+            <!-- Un solo botón de donación -->
+            <button onclick="location.href='https://www.paypal.com/donate?hosted_button_id=KC49AY4Y9J88U'">
+                Quiero hacer una donación
+            </button>
         </div>
     </section>
     <footer>
@@ -107,3 +105,5 @@
     </footer>
 </body>
 </html>
+
+       
